# search

./: .clang-format  .gitignore  CMakeLists.txt  Comparators.hpp  FileStore.hpp  KeyValueMemory.hpp  LICENSE  LoadExcerpt.hpp  README.md  SearchSettings.hpp  Sort.hpp  Types.hpp
.github/workflows/: build.yaml
cmake/: FindCityHash.cmake
include/search/: Comparators.hpp  CompressSize.hpp  Db.hpp  DocSimple.hpp  FileStore.hpp  FindMany.hpp  KeyValueFile.hpp  KeyValueFileList.hpp  KeyValueMemory.hpp  LoadExcerpt.hpp  MemoryStore.hpp  SearchSettings.hpp  Sort.hpp  TokenInfo.hpp  Tokenize.hpp  Types.hpp
src/: CompressSize.cpp  KeyValueFile.cpp  KeyValueFileList.cpp  LoadExcerpt.cpp  Tokenize.cpp
test/: CMakeLists.txt  Mocks.hpp  main.cpp  test1.cpp
test-wiki/: 1-convert.py  CMakeLists.txt  main.cpp
